--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
             display: inline-block;
             padding: 12px 25px;
             margin: 10px;
-            background-color: #1E90FF; /* синий цвет */
+            background-color: #5c6bc0; /* синий цвет */
             color: white;
             text-decoration: none;
             border-radius: 5px;
@@ -39,7 +39,7 @@
             transition: background 0.3s;
         }
         .btn:hover {
-            background-color: #1C86EE;
+            background-color: #5c6bc0;
         }
         nav.fixed-footer {
             position: fixed;
@@ -54,7 +54,7 @@
         nav.fixed-footer a {
             display: inline-block;
             padding: 12px 25px;
-            background-color: #1E90FF;
+            background-color: #5c6bc0;
             color: white;
             text-decoration: none;
             border-radius: 5px;
@@ -62,7 +62,7 @@
             transition: background 0.3s;
         }
         nav.fixed-footer a:hover {
-            background-color: #1C86EE;
+            background-color: #5c6bc0;
         }
     </style>
 </head>
