--- a/views/index.ejs
+++ b/views/index.ejs
@@ -112,10 +112,7 @@
 
     <!-- Основной контент -->
     <div class="container">
-        <p><strong>Email:</strong> <%= currentUser.email %></p>
-        <p><strong>Возраст:</strong> <%= currentUser.age %></p>
-        <p class="balance"><strong>Баланс:</strong> $<%= currentUser.balance.toFixed(2) %></p>
-        <p><strong>Ваш реферальный код:</strong> <%= currentUser.referralCode %></p>
+git add views/index.ejs        <p class="balance"><strong>Баланс:</strong> $<%= currentUser.balance.toFixed(2) %></p>
 
         <div class="buttons">
             <a href="/deposit" class="btn">Пополнить</a>
@@ -125,7 +122,7 @@
 
     <!-- Нижняя навигация -->
     <nav class="fixed-footer">
-        <a href="/group">👥 Моя группа</a>
+        <a href="/group">Моя группа</a>
     </nav>
 
 </body>
